--- a/main.html
+++ b/main.html
@@ -7,6 +7,17 @@
 </head>
 
 <body>
+	<h2>feedback form</h2>
+	<form action=" " method="post">
+	<div><label for="name" >please enter your name:</label></div>
+		<input type="text" id="name"minlength="3" maxlength="50" required>
+		<div><label for="portfolio" >please enter your portfolio:</label></div>
+		<input type="url" id="portfolio" required>
+		<div><label for="favColor" >please enter the likely color:</label></div>
+		<input type="color" id="favColor" required>
+		<div><label for="likeness" >how much u like about it:</label></div>
+		<input type="range" id="likeness" min="1" max="100"required>
+	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
