--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<h2>feedback form</h2>
+	<h1>Feedback Form</h1>
 	<form action=" " method="post">
 	<div><label for="name" >please enter your name:</label></div>
 		<input type="text" id="name"minlength="3" maxlength="50" required>
